--- a/tentang.html
+++ b/tentang.html
@@ -23,8 +23,8 @@
 					<h2>Sakata Transport</h2>
 					</center>
 					<li><a href="index.html"><i class="fa fa-home"></i>&nbsp;&nbsp; Beranda</a></li>
-					<li><a href="generic.html"><i class="fa fa-user"></i>&nbsp;&nbsp; Tentang</a></li>
-					<li><a href="elements.html"><i class="fa fa-phone"></i>&nbsp;&nbsp; Kontak</a></li>
+					<li><a href="tentang.html"><i class="fa fa-user"></i>&nbsp;&nbsp; Tentang</a></li>
+					<li><a href="galeri.html"><i class="fa fa-phone"></i>&nbsp;&nbsp; Kontak</a></li>
 				</ul>
 			</nav>
 
