--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<ul class="links">
 					<li><a href="index.html"><i class="fa fa-home"></i>&nbsp;&nbsp; Beranda</a></li>
 					<li><a href="tentang.html"><i class="fa fa-user"></i>&nbsp;&nbsp; Tentang</a></li>
-					<li><a href="galeri.html"><i class="fa fa-phone"></i>&nbsp;&nbsp; Galeri</a></li>
+					<li><a href="galeri.html"><i class="fa fa-file-photo-o"></i>&nbsp;&nbsp; Galeri</a></li>
 				</ul>
 			</nav>
 
