--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<p>Perusahaan yang bergerak di bidang transportasi darat dan beroperasi di wilayah Bandung dan sekitarnya. Kami adalah perusahaan yang mampu menjawab semua kebutuhan anda tentang proses pengiriman paket/barang.</p>
 						</div>
 						<footer>
-							<a href="generic.html" class="button alt">Selengkapnya</a>
+							<a href="tentang.html" class="button alt">Selengkapnya</a>
 						</footer>
 					</article>
 				</div>
